force-app/main/default/objects/Balance_Transfer__c/Balance_Transfer__c.object-meta.xml
<CustomObject>
    <label>Balance Transfer</label>
    <nameField>
        <displayFormat>BT-{0000}</displayFormat>
        <label>Balance Transfer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Balance Transfers</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>