force-app/main/default/objects/Balance_Transfer__c/fields/BL_Existing_Loan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BL_Existing_Loan_Start_Date__c</fullName>
    <label>Existing Loan Start Date</label>
    <type>Date</type>
</CustomField>