force-app/main/default/objects/Balance_Transfer__c/fields/BL_Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>BL_Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Balance Transfers</relationshipLabel>
    <relationshipName>Balance_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>