force-app/main/default/objects/Balance_Transfer__c/fields/BL_Loan_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>BL_Loan_Tenure_Months__c</fullName>
    <label>Loan Tenure (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>