force-app/main/default/objects/Balance_Transfer__c/fields/BL_No_of_Installments_Paid__c.field-meta.xml
<CustomField>
    <fullName>BL_No_of_Installments_Paid__c</fullName>
    <label>No. of Installments Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>