force-app/main/default/objects/Balance_Transfer__c/fields/BL_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>BL_Outstanding_Amount__c</fullName>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>