force-app/main/default/objects/Balance_Transfer__c/fields/BL_Product__c.field-meta.xml
<CustomField>
    <fullName>BL_Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BL</fullName>
                <default>true</default>
                <label>BL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>