force-app/main/default/objects/Balance_Transfer__c/fields/BL_Sanctioned_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>BL_Sanctioned_Loan_Amount__c</fullName>
    <label>Sanctioned Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>