force-app/main/default/objects/Balance_Transfer__c/fields/Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Sector Bank</fullName>
            </value>
            <value>
                <fullName>Public Sector Bank</fullName>
            </value>
            <value>
                <fullName>NBFC</fullName>
            </value>
            <value>
                <fullName>Cooperative Bank</fullName>
            </value>
            <value>
                <fullName>Scheduled Commercial Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>