force-app/main/default/objects/Balance_Transfer__c/validationRules/Existing_Loan_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Existing_Loan_Start_Date</fullName>
    <active>false</active>
    <errorConditionFormula>BL_Existing_Loan_Start_Date__c &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>BL_Existing_Loan_Start_Date__c</errorDisplayField>
    <errorMessage>The Existing Loan Start Date must be less than the current date</errorMessage>
</ValidationRule>